Dynamic Shell.TitleView in Edit mode. Edit Mode animation for BaseCard scale and button using style trigger+ XamAnimations. - Added EditModeCommand - Frame Scaling embeded in style inside the template and removed from HomePage.xaml - Adjust Animation parameters. - Add bindable property command to CircleIconView

--- a/XamsungHealth/App.xaml
+++ b/XamsungHealth/App.xaml
@@ -5,9 +5,9 @@
              xmlns:fontawesome="clr-namespace:XamsungHealth.Lib.Fonts;assembly=XamsungHealth.Lib"
              xmlns:xct="http://xamarin.com/schemas/2020/toolkit">
 
-
     <Application.Resources>
         <ResourceDictionary>
+            <!--  region Colors  -->
             <Color x:Key="MainBackgroundColor">
                 WhiteSmoke
             </Color>
@@ -15,12 +15,11 @@
             <Color x:Key="MainGreen">
                 #00CE08
             </Color>
+            <!--#endregion-->
 
             <Style TargetType="{x:Type Tab}">
                 <Setter Property="Shell.TabBarBackgroundColor" Value="{DynamicResource MainBackgroundColor}"/>
                 <Setter Property="Shell.TabBarTitleColor" Value="Black"/>
-                <Setter Property="Shell.NavBarHasShadow" Value="False"/>
-                <Setter Property="Shell.NavBarIsVisible" Value="True"/>
             </Style>
 
 
