Replace hard-coded xaml with a CollectionView bound to an ObservableCollection. Nothing in TogetherPage jus for test.

--- a/XamsungHealth/AppShell.xaml
+++ b/XamsungHealth/AppShell.xaml
@@ -27,7 +27,7 @@
             </Tab.Icon>
             <ShellContent Title="Together"
                           Route="Together"
-                          ContentTemplate="{DataTemplate xamsunghealth:HomePage}"/>
+                          ContentTemplate="{DataTemplate xamsunghealth:TogetherPage}"/>
         </Tab>
 
         <Tab Title="Discover">
