Fix binding issue in HomeViewModel that breaks EditMode animations. Adjusting TranslationY animation value. Change EditModeCommand type from Command to ICommand

--- a/XamsungHealth/Views/HomePage.xaml
+++ b/XamsungHealth/Views/HomePage.xaml
@@ -48,8 +48,7 @@
     </ContentPage.Resources>
 
 
-    <StackLayout Padding="10,5"
-                 Spacing="10">
+    <StackLayout Margin="15,10">
         <CollectionView ItemsSource="{Binding BaseCardsList}">
             <CollectionView.ItemsLayout>
                 <LinearItemsLayout ItemSpacing="10"
@@ -58,10 +57,8 @@
 
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <StackLayout>
-                        <ContentView x:DataType="local:BaseCard"
-                                     Content="{Binding .}"/>
-                    </StackLayout>
+                    <ContentView x:DataType="local:BaseCard"
+                                 Content="{Binding .}"/>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
 
