--- a/XamsungHealth/App.xaml
+++ b/XamsungHealth/App.xaml
@@ -39,6 +39,7 @@
             <ControlTemplate x:Key="AppBar">
                 <StackLayout Margin="0,5,0,0"
                              Orientation="Horizontal"
+                             BackgroundColor="{TemplateBinding BackgroundColor}"
                              Spacing="30">
                     <xct:BadgeView Margin="-5"
                                    FontSize="8"
