Add ripple effect on Cards when in EditMode, works onl on last Card item of CollectionView - under investigation Adjust scale animation easings Reduce ItemsSpacing when in edit mode, can't reduce below 0

--- a/XamsungHealth/Views/HomePage.xaml
+++ b/XamsungHealth/Views/HomePage.xaml
@@ -59,7 +59,7 @@
             </CollectionView.Behaviors>
 
             <CollectionView.ItemsLayout>
-                <LinearItemsLayout ItemSpacing="10"
+                <LinearItemsLayout ItemSpacing="{Binding IsInEditMode, Converter={xct:BoolToObjectConverter FalseObject=10, TrueObject=0}}"  
                                    Orientation="Vertical"/>
             </CollectionView.ItemsLayout>
 
