Detect changes (on Order and no IsHidden) logic. Implement CancelPopup and manage control flow. When Hidden=>true move to after last not hidden element. When Hidden=>true move to after last not hidden element.

--- a/XamsungHealth/Views/HomePage.xaml
+++ b/XamsungHealth/Views/HomePage.xaml
@@ -128,7 +128,7 @@
 
             <Button Grid.Column="0"
                     Style="{StaticResource BottomButtonsStyle}"
-                    Command="{Binding CancelCommand}"
+                    Clicked="Cancel_Clicked"
                     Text="Cancel"/>
             <Button Grid.Column="1"
                     Style="{StaticResource BottomButtonsStyle}"
